--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+qbittorrent (3.1.3-1+build1) unstable; urgency=low
+
+  * debian/patches/: spoof-peer-id
+  * debian/patches/: Prioritize-last-few-pieces
+
+ -- Zhong Jianxin <azuwis@gmail.com>  Mon, 02 Dec 2013 15:56:03 +0800
+
 qbittorrent (3.1.3-1) unstable; urgency=low
 
   * New upstream version.
