--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,18 @@
+* Tue Apr 29 2014 - sledgehammer999 <sledgehammer999@qbittorrent.org> - v3.1.9.2
+    - OTHER: The v3.1.9.1 Windows build was broken
+
+* Mon Apr 28 2014 - sledgehammer999 <sledgehammer999@qbittorrent.org> - v3.1.9.1
+    - OTHER: This is an excuse to produce new builds with an OpenSSL version that isn't affected by the heartbleed bug for Windows and Mac. This bug should only affect the WebUI and only if HTTPS/SSL authentication was enabled.
+
+* Sat Mar 01 2014 - sledgehammer999 <sledgehammer999@qbittorrent.org> - v3.1.9
+    - BUGFIX: Fix nox build. Closes #1368 (bob23450)
+    - BUGFIX: Fix build with libtorrent 0.15.x (sledgehammer999)
+    - BUGFIX: Fix missing percentage signs. Closes #1392. (sledgehammer999)
+    - BUGFIX: Fix queue sorting order. (alfrix)
+    - BUGFIX: Fix build using qt < 4.7 Closes #1385. (Evgeny Lensky)
+    - BUGFIX: Fix autoupdater. Send our user-agent to sourceforge.net (sledgehammer999)
+    - FEATURE: Add button for links in toolbar (alfrix)
+
 * Sun Feb 02 2014 - sledgehammer999 <sledgehammer999@qbittorrent.org> - v3.1.8
     - BUGFIX: Really fix build of v3.1.6
 
