--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+qbittorrent (3.1.9.2-1+azuwis1) unstable; urgency=low
+
+  * debian/patches/: Spoof-peer-id
+  * debian/patches/: Prioritize-last-few-pieces
+
+ -- Zhong Jianxin <azuwis@gmail.com>  Sat, 14 Jun 2014 23:35:11 +0800
+
 qbittorrent (3.1.9.2-1) unstable; urgency=medium
 
   * New upstream release (Closes: #744903, #750238).
