--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+qbittorrent (3.1.9.2-1+azuwis2) unstable; urgency=low
+
+  * debian/patches/: webui-Add-sequential-download-context-menu
+
+ -- Zhong Jianxin <azuwis@gmail.com>  Tue, 12 Aug 2014 17:20:19 +0800
+
 qbittorrent (3.1.9.2-1+azuwis1) unstable; urgency=low
 
   * debian/patches/: Spoof-peer-id
