--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+qbittorrent (3.2.3-2+brew1) unstable; urgency=medium
+
+  * debian/patches/: Set-peer-id-to-KTorrent-3.3.2
+  * debian/patches/: Prioritize-last-pieces-to-16M
+
+ -- Zhong Jianxin <azuwis@gmail.com>  Sun, 15 Nov 2015 22:12:34 +0800
+
 qbittorrent (3.2.3-2) unstable; urgency=medium
 
   * debian/rules: Pass --with-boost-libdir to configure to fix build
